--- a/src/index.css
+++ b/src/index.css
@@ -30,36 +30,61 @@
     flex: 1 0 0;
     background-color: #3E6259;
     border-radius: 50px;
-    background: radial-gradient(farthest-corner,#3E6259 , transparent)
+    background: radial-gradient(farthest-corner,#3E6259 , transparent);
+		display:flex;
+		overflow-y:scroll;
+		box-sizing:border-box;
+}
+.messagebox::-webkit-scrollbar
+{
+	width:10px;
+}
+.messagebox::-webkit-scrollbar-thumb
+{
+	background: #3E6259;
+	border-radius:10px;
+}
+.messagebox::-webkit-scrollbar-button
+{
+	height:5%;
 }
 
 .inputbox{
-    height: 10vh;
-    flex: 0 0 35px ;
+    height: fit-content;
+		max-height:20vh;
+    flex: 1 0 100% ;
     gap: 3px;
     display: flex;
     margin: 2px;
-    
-
+		align-items:center;
 }
 
-input{
+textarea{
     flex: 1 0 0;
-    font-size: 1.5rem;
-    border-radius: 500px;
-    padding: 15px;
-    /* border: 1px solid black ; */
-    border: none;
+		font-size:1.5rem;
+    border-radius: 25px;
+    border: 1px solid black ;
     background: #dff2d8;
-
+		max-height:15vh;
+		height:53px;
+		padding:10px 25px
 }
-input:focus-visible{
+textarea::-webkit-scrollbar
+{
+	width:0;
+}
+textarea:focus-visible{
     border: none;
     outline: none;
 }
 
 button{
-    width: 30vh;
+		padding:2.5vh 5vh;
+		align-items:center;
+		display:flex;
+		justify-content:center;
+		flex:0 0 20vh;
+    width: 20vh;
     border-radius: 500px;
     border: none;
     color: white;
@@ -72,4 +97,35 @@ button:hover{
     
     background: #7f4f24;
 
+}
+li
+{
+	list-style:none;
+	background:#9e856a;
+	padding:10px 25px;
+	box-sizing:border-box;
+	border-radius:50px;
+	width:min-content;
+	max-width:50%;
+	overflow-wrap:break-word;
+}
+.messagebox > ul
+{
+	flex:1 0 0;
+	box-sizing:border-box;
+	display:flex;
+	flex-direction:column;
+	padding:40px 80px;
+	gap:10px;
+	max-width:100%;
+}
+.inmessage
+{
+	align-self:flex-end;
+	border-bottom-right-radius:0;
+}
+.outmessage
+{
+	align-self:flex-start;
+	border-top-left-radius:0;
 }
